syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-category/api/proto/v1";

message AddCategoryRequest {
  string userId = 1;
  string categoryId = 2;
  string name = 3;
  string emoji = 4;
}

message AddCategoryResponse {
  string categoryId = 1;
}
