syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-category/api/proto/v1";

import "v1/get-category.proto";

message GetCategoriesMapRequest {
  string userId = 1;
  repeated string categoryIds = 2;
}

message GetCategoriesMapResponse {
  map<string, Category> categories = 1;
}
