syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-category/api/proto/v1";

message Category {
  string categoryId = 1;
  string name = 2;
  string emoji = 3;
}

message GetCategoryRequest {
  string userId = 1;
  string categoryId = 2;
}

message GetCategoryResponse {
  Category category = 1;
}
