syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-category/api/proto/v1";

message UpdateCategoryRequest {
  string userId = 1;
  string categoryId = 2;
  string name = 3;
  optional string emoji = 4;
}

message UpdateCategoryResponse {
  string message = 1;
}
